# supplier-entity-mapping

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/raw/: synthetic_suppliers.csv
docs/superpowers/plans/: 2026-03-22-supplier-rag-implementation.md
docs/superpowers/specs/: 2026-03-22-supplier-rag-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  styles.css
src/supplier_entity_mapping/: config.py  main.py
src/supplier_entity_mapping/api/: __init__.py  app.py  dependencies.py  routes.py
src/supplier_entity_mapping/cli/: run_pipeline.py
src/supplier_entity_mapping/ingestion/: __init__.py  document_builder.py  tabular_loader.py
src/supplier_entity_mapping/models/: schemas.py
src/supplier_entity_mapping/rag/: query_service.py
src/supplier_entity_mapping/services/: index_service.py
tests/: test_api.py  test_document_builder.py  test_index_service.py  test_query_service.py
