[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supplier-entity-mapping"
version = "0.1.0"
description = "Local supplier retrieval app using FastAPI, ChromaDB, Hugging Face embeddings, and Groq via LangChain."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "Sivaji Gundala" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.7,<3.0",

  "pandas>=2.2,<3.0",
  "openpyxl>=3.1.5,<4.0",
  "defusedxml>=0.7.1,<1.0",

  "langchain>=1.2,<1.3",
  "langchain-groq>=1.1,<1.2",
  "langchain-huggingface>=1.2,<1.3",
  "langchain-chroma>=1.1,<1.2",

  "chromadb>=1.0,<2.0",
  "sentence-transformers>=5.1,<6.0",

  "python-dotenv>=1.0,<2.0",
  "orjson>=3.10,<4.0",
  "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.11,<1.0",
  "mypy>=1.15,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
mypy_path = "src"